--- a/defaults.yml
+++ b/defaults.yml
@@ -31,7 +31,7 @@ xmpp:
     cert: ./server.crt
 
 database:
-  uri: mongodb://database:27017/hp_mongo
+  uri: mongodb://mongo:27017/hp_mongo
 
 secrets:
   cookie: secretsauce
