--- a/codefresh.yml
+++ b/codefresh.yml
@@ -19,3 +19,11 @@ steps:
      type: push
      candidate: ${{build-step}}
      tag: ${{CF_BRANCH}}
+
+ demo-chat compositon:
+      type: composition
+      composition: demochat-oleg
+      composition-candidates:
+        main:
+          image: nhoag/curl
+          command: bash -c "sleep 20 && curl http://app:5000/" | echo 'works'
