--- a/codefreshCD.yaml
+++ b/codefreshCD.yaml
@@ -1,6 +1,6 @@
 version: '1.0'
 steps:
-  
+
   build-step:
     type: build
     dockerfile: Dockerfile
@@ -10,7 +10,7 @@ steps:
   deploy to ecs:
     image: codefresh/cf-deploy-ecs
     commands:
-      - cfecs-update --image-name containers101/demochat --image-tag ${{CF_BRANCH}} eu-west-1 demochat-production demochat-service
+      - cfecs-update --image-name verchol/demochat --image-tag ${{CF_BRANCH}} eu-west-1 demochat-production demochat-service
     environment:
       - AWS_ACCESS_KEY_ID=${{AWS_ACCESS_KEY_ID}}
       - AWS_SECRET_ACCESS_KEY=${{AWS_SECRET_ACCESS_KEY}}
