--- a/codefreshCD.yaml
+++ b/codefreshCD.yaml
@@ -11,9 +11,9 @@ steps:
       type: push
       candidate: ${{build-step}}
       tag: ${{CF_BRANCH}}
-      credentials:
-        username: ${{AWS_USERNAME}}
-        password: ${{AWS_PASSWORD}}
+    #  credentials:
+    #    username: ${{AWS_USERNAME}}
+    #    password: ${{AWS_PASSWORD}}
 
   deploy to ecs:
     image: codefresh/cf-deploy-ecs
