--- a/codefresh.yml
+++ b/codefresh.yml
@@ -5,7 +5,7 @@ steps:
       fail-fast: false
       working-directory : ${{initial-clone}}
       commands:
-        #- npm install --dev
+        - npm install  
         #- npm install -g gulp
         - npm test
 
