--- a/codefresh.yml
+++ b/codefresh.yml
@@ -12,7 +12,7 @@ steps:
       fail-fast: false
       working-directory : ${{initial-clone}}
       commands:
-        - npm install
+        #- npm install
         #- npm install -g gulp
         - npm test
 
