--- a/codefresh.yml
+++ b/codefresh.yml
@@ -27,7 +27,7 @@ steps:
       composition-candidates:
         main:
           image: nhoag/curl
-          command: bash -c "sleep 20 && curl http://app:5000/" | echo 'works'
+          command: bash -c "sleep 20 && curl http://demochat:5000/" | echo 'works'
 
  deploy to ecs:
      image: codefresh/cf-deploy-ecs
