--- a/package.json
+++ b/package.json
@@ -75,12 +75,14 @@
     "helmet": "^0.11.0",
     "i18n": "^0.5.0",
     "js-yaml": "^3.4.2",
+    "kefir": "^3.7.1",
     "less": "2.6.1",
     "lodash": "^3.10.1",
     "md5": "^2.0.0",
     "migroose": "^0.5.0",
     "migroose-cli": "^0.1.0",
     "moment": "^2.10.6",
+    "mongodb": "^2.2.25",
     "mongoose": "~4.1.8",
     "mongoose-unique-validator": "~0.4.1",
     "mongoose-validate": "0.0.5",
