--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,14 @@
+#this is an example of a self-hosted chat app.
+#the composition uses just mongo as a database and an image that was built from a demo application https://github.com/containers101/demochat
+
 version: '2'
 services:
-  web:
-    build: .
+  app:
+    image: 'containers101/demochat:master'
+    links:
+      - mongo
     ports:
       - 5000
   mongo:
-    image: mongo
-
+    image: 'mongo:latest'
+    command: mongod --smallfiles
