--- a/package.json
+++ b/package.json
@@ -64,7 +64,10 @@
   "dependencies": {
     "async": "^1.4.2",
     "bcryptjs": "~2.2.2",
+    "bluebird": "^3.5.0",
+    "bluebird-retry": "^0.10.1",
     "body-parser": "^1.14.0",
+    "chalk": "^1.1.3",
     "colors": "~1.1.2",
     "compression": "^1.5.2",
     "connect-assets": "^5.0.1",
