--- a/codefresh.yml
+++ b/codefresh.yml
@@ -30,6 +30,7 @@ steps:
      tag: ${{CF_BRANCH}}
      
  # url: http://demo-chat-1903559730.eu-west-1.elb.amazonaws.com
+ # http://demo.codefresh.io
  deploy_to_ecs:
     title: Deploy Container to ECS
     image: codefresh/cf-deploy-ecs
@@ -40,3 +41,7 @@ steps:
     environment:
       - 'AWS_ACCESS_KEY_ID=${{AWS_ACCESS_KEY_ID}}'
       - 'AWS_SECRET_ACCESS_KEY=${{AWS_SECRET_ACCESS_KEY}}'
+    when:
+      branch:
+        only:
+          - master
