--- a/codefresh.yml
+++ b/codefresh.yml
@@ -41,5 +41,4 @@ steps:
     environment:
       - 'AWS_ACCESS_KEY_ID=${{AWS_ACCESS_KEY_ID}}'
       - 'AWS_SECRET_ACCESS_KEY=${{AWS_SECRET_ACCESS_KEY}}'
-    when:
-      - ${{DEPLOY_ECS}}=true
+    when: ${{DEPLOY_ECS}}=true
