--- a/codefresh.yml
+++ b/codefresh.yml
@@ -41,4 +41,7 @@ steps:
     environment:
       - 'AWS_ACCESS_KEY_ID=${{AWS_ACCESS_KEY_ID}}'
       - 'AWS_SECRET_ACCESS_KEY=${{AWS_SECRET_ACCESS_KEY}}'
-    when: ${{DEPLOY_ECS}}=true
+    when:
+      condition:
+        all:
+          deploy_to_ecs: '"${{DEPLOY_ECS}}" == "true"'
