added kubernetes deploy

--- a/codefresh.yml
+++ b/codefresh.yml
@@ -49,3 +49,23 @@ steps:
     environment:
       - 'AWS_ACCESS_KEY_ID=${{AWS_ACCESS_KEY_ID}}'
       - 'AWS_SECRET_ACCESS_KEY=${{AWS_SECRET_ACCESS_KEY}}'
+    when:
+      condition:
+        all:
+          deploy_to_ecs: '"${{DEPLOY_ECS}}" == "true"'
+
+  deploy_to_kubernetes:
+    image: codefresh/cf-deploy-kubernetes
+    tag: master
+    working-directory: ${{initial-clone}}
+    commands:
+      - /cf-deploy-kubernetes kube-deployment.yml
+    environment:
+      - KUBERNETES_USER=${{KUBERNETES_USER}}
+      - KUBERNETES_PASSWORD=${{KUBERNETES_PASSWORD}}
+      - KUBERNETES_SERVER=${{KUBERNETES_SERVER}}
+      - DOCKER_IMAGE_TAG=${{CF_BRANCH}}
+    when:
+      condition:
+        all:
+          deploy_to_kubernetes: '"${{DEPLOY_KUBERNETES}}" == "true"'
