--- a/deploy/kube-ingress.yml
+++ b/deploy/kube-ingress.yml
@@ -3,8 +3,8 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: app
-  name: app
+    app: demo-chat
+  name: demo-chat
 spec:
   type: NodePort
   ports:
@@ -13,13 +13,13 @@ spec:
     protocol: TCP
     targetPort: 5000
   selector:
-    service: app
+    service: demo-chat
 ---
-apiVersion: extensions/v1beta1
+apiVersion: extensions/v1beta1g
 kind: Ingress
 metadata:
   name: demochat-ingress
 spec:
   backend:
-    serviceName: app
+    serviceName: demochat-board
     servicePort: 80
