--- a/deploy/kube-mongo.yml
+++ b/deploy/kube-mongo.yml
@@ -1,25 +1,27 @@
----
-kind: StorageClass
-apiVersion: storage.k8s.io/v1beta1
-metadata:
-  name: gce-disk
-provisioner: kubernetes.io/gce-pd
-parameters:
-  type: pd-ssd
+#---
+#kind: StorageClass
+#apiVersion: storage.k8s.io/v1beta1
+#metadata:
+#  name: gce-disk
+#provisioner: kubernetes.io/gce-pd
+#parameters:
+#  type: pd-ssd
 
----
-kind: PersistentVolumeClaim
-apiVersion: v1
-metadata:
-  name: mongo-volume-claim
-  annotations:
-    volume.beta.kubernetes.io/storage-class: gce-disk
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 3Gi
+#---
+#apiVersion: v1
+#kind: PersistentVolume
+#metadata:
+  #name: mongo-volume
+  #annotations:
+  #  volume.beta.kubernetes.io/storage-class: gce-disk
+#spec:
+  #accessModes:
+  #  - ReadWriteOnce
+  #capacity:
+  #  storage: 5Gi
+  #hostPath:
+    #  path: /data/pv0001/
+
 ---
 apiVersion: v1
 kind: Service
@@ -66,5 +68,4 @@ spec:
       restartPolicy: Always
       volumes:
       - name: mongo-data
-        persistentVolumeClaim:
-          claimName: mongo-volume-claim
+        emptyDir: {}
