--- a/deployment-board-demo.yml
+++ b/deployment-board-demo.yml
@@ -2,9 +2,9 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: demochat-master
+  name: demochat-board
   labels:
-    service: demochat-master
+    service: demochat-board
 spec:
   replicas: 1
   template:
