--- a/deployment-board-demo.yml
+++ b/deployment-board-demo.yml
@@ -12,7 +12,7 @@ spec:
       annotations:
         forceRedeployUniqId: "{{CF_REVISION}}"
       labels:
-        service: app
+        service: demochat-board
     spec:
       containers:
       - image: verchol/demochat-board:{{CF_BRANCH}}
