--- a/deployment-board-demo.yml
+++ b/deployment-board-demo.yml
@@ -2,9 +2,9 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: demochat_board
+  name: demochatboard
   labels:
-    service: demochat_board
+    service: demochatboard
 spec:
   replicas: 1
   template:
@@ -12,7 +12,7 @@ spec:
       annotations:
         forceRedeployUniqId: "{{CF_REVISION}}"
       labels:
-        service: demochat_board
+        service: demochatboard
     spec:
       containers:
       - image: verchol/demochat_board:{{CF_BRANCH}}
