--- a/deployment-master.yml
+++ b/deployment-master.yml
@@ -2,9 +2,9 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: demochat_master
+  name: demochatmaster
   labels:
-    service: demochat_master
+    service: demochatmaster
 spec:
   replicas: 1
   template:
@@ -12,7 +12,7 @@ spec:
       annotations:
         forceRedeployUniqId: "{{CF_REVISION}}"
       labels:
-        service: demochat_master
+        service: demochatmaster
     spec:
       containers:
       - image: verchol/demochat-board:{{CF_BRANCH}}
