--- a/annotation.yml
+++ b/annotation.yml
@@ -26,6 +26,8 @@ steps:
         set:
           - '${{BuildingDockerImage.imageId}}':
               - CF_QUALITY: true
+          - '${{BuildingDockerImage.imageId}}':
+              - CF_QUALITY1: true
     on_fail:
       metadata:
         set:
