--- a/annotation.yml
+++ b/annotation.yml
@@ -6,9 +6,13 @@ steps:
     image_name: containers101/demochat
     working_directory: ./
     dockerfile: Dockerfile
-      metadata:
-        set:
-          qa: pending
+    metadata: # Declare the metadata attribute
+      set: # Specify the set operation
+        - qa: pending
+        - commit_message: ${{CF_COMMIT_MESSAGE}}
+        - exit_code: 0
+        - is_main: 
+          evaluate: "'${{CF_BRANCH}}' == 'main'"
   RunningUnitTests:
     title: Running Unit Tests
     type: composition
