--- a/deployment.yml
+++ b/deployment.yml
@@ -1,4 +1,14 @@
 ---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: prometheus-rules
+data: |
+  aaaa
+  bbbb
+  cccc
+
+---
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
@@ -6,7 +16,7 @@ metadata:
   labels:
     service: app
 spec:
-  replicas: 2
+  replicas: 5
   template:
     metadata:
       annotations:
@@ -15,7 +25,7 @@ spec:
         service: app
     spec:
       containers:
-      - image: chloecodesthings/demochat:{{CF_BRANCH}}
+      - image: containers101/demochat:{{CF_BRANCH}}
         name: app
         imagePullPolicy: Always
         ports:
